--- a/FlightOrHotelBooking/test-output/old/Default suite/classes.html
+++ b/FlightOrHotelBooking/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.tests.HotelPageTest</td>
+<td>com.qa.tests.SignInTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -19,7 +19,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>shouldBeAbleToSearchForHotelsTest</td>
+<td>shouldThrowAnErrorIfSignInDetailsAreMissingTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
