--- a/FlightOrHotelBooking/test-output/old/Default suite/methods-alphabetical.html
+++ b/FlightOrHotelBooking/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:29:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelPageTest.setUp()[pri:0, instance:com.qa.tests.HotelPageTest@ae45eb6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:30:27</td>   <td>41863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelPageTest.setUp()[pri:0, instance:com.qa.tests.HotelPageTest@ae45eb6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:31:00</td>   <td>74863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelPageTest.setUp()[pri:0, instance:com.qa.tests.HotelPageTest@ae45eb6]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:31:33</td>   <td>107541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelPageTest.shouldBeAbleToSearchForHotelsTest()[pri:3, instance:com.qa.tests.HotelPageTest@ae45eb6]">shouldBeAbleToSearchForHotelsTest</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:30:26</td>   <td>41121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HotelPageTest.tearDown()[pri:0, instance:com.qa.tests.HotelPageTest@ae45eb6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:30:59</td>   <td>74074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HotelPageTest.tearDown()[pri:0, instance:com.qa.tests.HotelPageTest@ae45eb6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:31:41</td>   <td>116202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HotelPageTest.tearDown()[pri:0, instance:com.qa.tests.HotelPageTest@ae45eb6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:30:59</td>   <td>73963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelPageTest.verifyLogoTest()[pri:2, instance:com.qa.tests.HotelPageTest@ae45eb6]">verifyLogoTest</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>18/05/16 09:30:26</td>   <td>41090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelPageTest.verifyTitleTest()[pri:1, instance:com.qa.tests.HotelPageTest@ae45eb6]">verifyTitleTest</td> 
-  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/05/16 16:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInTest.setUp()[pri:0, instance:com.qa.tests.SignInTest@604ed9f0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/05/16 16:40:18</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.shouldThrowAnErrorIfSignInDetailsAreMissingTest()[pri:3, instance:com.qa.tests.SignInTest@604ed9f0]">shouldThrowAnErrorIfSignInDetailsAreMissingTest</td> 
+  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/05/16 16:40:18</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.verifyLogoTest()[pri:2, instance:com.qa.tests.SignInTest@604ed9f0]">verifyLogoTest</td> 
+  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>18/05/16 16:40:18</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.verifyTitleTest()[pri:1, instance:com.qa.tests.SignInTest@604ed9f0]">verifyTitleTest</td> 
+  <td>main@540585569</td>   <td></td> </tr>
 </table>
