--- a/FlightOrHotelBooking/test-output/old/Suite/methods-alphabetical.html
+++ b/FlightOrHotelBooking/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74b285">  <td>18/05/16 17:20:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FlightBookingTest.setUp()[pri:0, instance:com.qa.tests.FlightBookingTest@6093dd95]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>18/05/16 17:20:16</td>   <td>5326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelBookingTest.setUp()[pri:0, instance:com.qa.tests.HotelBookingTest@5622fdf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/16 17:20:21</td>   <td>9811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInTest.setUp()[pri:0, instance:com.qa.tests.SignInTest@4883b407]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>18/05/16 17:20:26</td>   <td>14651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.shouldBeAbleToSearchForHotelsTest()[pri:3, instance:com.qa.tests.HotelBookingTest@5622fdf]">shouldBeAbleToSearchForHotelsTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/16 17:20:26</td>   <td>14664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.shouldThrowAnErrorIfSignInDetailsAreMissingTest()[pri:3, instance:com.qa.tests.SignInTest@4883b407]">shouldThrowAnErrorIfSignInDetailsAreMissingTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>18/05/16 17:20:26</td>   <td>14643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.testThatResultsAppearForAOneWayJourneyTest()[pri:3, instance:com.qa.tests.FlightBookingTest@6093dd95]">testThatResultsAppearForAOneWayJourneyTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>18/05/16 17:20:25</td>   <td>14619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.verifyLogoTest()[pri:2, instance:com.qa.tests.FlightBookingTest@6093dd95]">verifyLogoTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>18/05/16 17:20:26</td>   <td>14635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.verifyLogoTest()[pri:2, instance:com.qa.tests.HotelBookingTest@5622fdf]">verifyLogoTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/16 17:20:26</td>   <td>14639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.verifyLogoTest()[pri:2, instance:com.qa.tests.SignInTest@4883b407]">verifyLogoTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>18/05/16 17:20:16</td>   <td>5311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.verifyTitleTest()[pri:1, instance:com.qa.tests.FlightBookingTest@6093dd95]">verifyTitleTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="69b199">  <td>18/05/16 17:20:21</td>   <td>9796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.verifyTitleTest()[pri:1, instance:com.qa.tests.HotelBookingTest@5622fdf]">verifyTitleTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>18/05/16 17:20:25</td>   <td>14587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.verifyTitleTest()[pri:1, instance:com.qa.tests.SignInTest@4883b407]">verifyTitleTest</td> 
-  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:49:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FlightBookingTest.setUp()[pri:0, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:50:18</td>   <td>27475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelBookingTest.setUp()[pri:0, instance:com.qa.tests.HotelBookingTest@7cd62f43]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:50:40</td>   <td>49178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInTest.setUp()[pri:0, instance:com.qa.tests.SignInTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:51:01</td>   <td>69848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FlightBookingTest.setUp()[pri:0, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:51:22</td>   <td>91458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelBookingTest.setUp()[pri:0, instance:com.qa.tests.HotelBookingTest@7cd62f43]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:51:45</td>   <td>113836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInTest.setUp()[pri:0, instance:com.qa.tests.SignInTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:52:16</td>   <td>145059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FlightBookingTest.setUp()[pri:0, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:52:58</td>   <td>187759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HotelBookingTest.setUp()[pri:0, instance:com.qa.tests.HotelBookingTest@7cd62f43]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:53:34</td>   <td>223406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignInTest.setUp()[pri:0, instance:com.qa.tests.SignInTest@6d4b1c02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:53:20</td>   <td>208900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.shouldBeAbleToSearchForHotelsTest()[pri:3, instance:com.qa.tests.HotelBookingTest@7cd62f43]">shouldBeAbleToSearchForHotelsTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:53:59</td>   <td>248020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.shouldThrowAnErrorIfSignInDetailsAreMissingTest()[pri:3, instance:com.qa.tests.SignInTest@6d4b1c02]">shouldThrowAnErrorIfSignInDetailsAreMissingTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:50:17</td>   <td>26596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FlightBookingTest.tearDown()[pri:0, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:50:39</td>   <td>48462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HotelBookingTest.tearDown()[pri:0, instance:com.qa.tests.HotelBookingTest@7cd62f43]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:51:00</td>   <td>69134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignInTest.tearDown()[pri:0, instance:com.qa.tests.SignInTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:51:21</td>   <td>90735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FlightBookingTest.tearDown()[pri:0, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:51:44</td>   <td>112850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HotelBookingTest.tearDown()[pri:0, instance:com.qa.tests.HotelBookingTest@7cd62f43]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:52:15</td>   <td>144269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignInTest.tearDown()[pri:0, instance:com.qa.tests.SignInTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:52:58</td>   <td>186988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FlightBookingTest.tearDown()[pri:0, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:53:33</td>   <td>222615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HotelBookingTest.tearDown()[pri:0, instance:com.qa.tests.HotelBookingTest@7cd62f43]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:54:03</td>   <td>252600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignInTest.tearDown()[pri:0, instance:com.qa.tests.SignInTest@6d4b1c02]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:52:51</td>   <td>180506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.testThatResultsAppearForAOneWayJourneyTest()[pri:3, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">testThatResultsAppearForAOneWayJourneyTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:51:21</td>   <td>90635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.verifyLogoTest()[pri:2, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">verifyLogoTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:51:43</td>   <td>112690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.verifyLogoTest()[pri:2, instance:com.qa.tests.HotelBookingTest@7cd62f43]">verifyLogoTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:52:15</td>   <td>144161</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.verifyLogoTest()[pri:2, instance:com.qa.tests.SignInTest@6d4b1c02]">verifyLogoTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>18/05/17 07:50:17</td>   <td>26524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.verifyTitleTest()[pri:1, instance:com.qa.tests.FlightBookingTest@6a41eaa2]">verifyTitleTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>18/05/17 07:50:39</td>   <td>48418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.verifyTitleTest()[pri:1, instance:com.qa.tests.HotelBookingTest@7cd62f43]">verifyTitleTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="a4fc66">  <td>18/05/17 07:51:00</td>   <td>69110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.verifyTitleTest()[pri:1, instance:com.qa.tests.SignInTest@6d4b1c02]">verifyTitleTest</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
 </table>
