--- a/FlightAndHotelBookingCodeChange/test-output/old/Default suite/methods-alphabetical.html
+++ b/FlightAndHotelBookingCodeChange/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b66870">  <td>18/05/16 17:03:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTest.shouldBeAbleToSearchForHotels()[pri:0, instance:Tests.HotelBookingTest@617faa95]">shouldBeAbleToSearchForHotels</td> 
-  <td>main@1232306490</td>   <td></td> </tr>
+<tr bgcolor="b66870">  <td>18/05/17 09:11:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Hotel.shouldBeAbleToSearchForHotels()[pri:0, instance:Tests.Hotel@224edc67]">shouldBeAbleToSearchForHotels</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
 </table>
